Implementacao do botao de explicacao - Pequenos ajustes

--- a/estudos/exercicios-javascript/javascript-aula1/exercicio-i18n.html
+++ b/estudos/exercicios-javascript/javascript-aula1/exercicio-i18n.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<h3>Você já viu a abreviatura “i18n” ?</h3>
 				A proposta do exercício tem por objetivo replicar um algoritmo que converte uma
 				palavra em um texto onde:
