--- a/estudos/exercicios-javascript/javascript-aula10/exercicio-3.html
+++ b/estudos/exercicios-javascript/javascript-aula10/exercicio-3.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Partindo da solução final da aplicação de Lista de Filmes resolvida no
 					material desta aula, vamos adicionar mais uma funcionalidade a ela:
