--- a/estudos/exercicios-javascript/javascript-aula10/exercicio-4.html
+++ b/estudos/exercicios-javascript/javascript-aula10/exercicio-4.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Somir, o diretor de um parquinho de divers&otilde;es, recebeu uma lista de
 					eventos programados para a pr&oacute;xima semana.
