--- a/estudos/exercicios-javascript/javascript-aula10/exercicio-5.html
+++ b/estudos/exercicios-javascript/javascript-aula10/exercicio-5.html
@@ -12,7 +12,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Vamos adicionar uma nova funcionalidade ao &uacute;ltimo exerc&iacute;cio
 					da aula passada (aplica&ccedil;&atilde;o de cadastro de produtos).
