--- a/estudos/exercicios-javascript/javascript-aula11/exercicio-3.html
+++ b/estudos/exercicios-javascript/javascript-aula11/exercicio-3.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Numa certa p&aacute;gina web, h&aacute; um formul&aacute;rio para
 					preenchimento de nome e telefone.
