--- a/estudos/exercicios-javascript/javascript-aula11/exercicio-4.html
+++ b/estudos/exercicios-javascript/javascript-aula11/exercicio-4.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Crie uma p&aacute;gina web que pe&ccedil;a ao usu&aacute;rio que digite a
 					data de nascimento de uma pessoa e seu g&ecirc;nero.
