--- a/estudos/exercicios-javascript/javascript-aula13/exercicio-2.html
+++ b/estudos/exercicios-javascript/javascript-aula13/exercicio-2.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Refa&ccedil;a o exerc&iacute;cio anterior, aumentando o delay do setTimeout
 					para 60 segundos e adicionando um setInterval que mostre os
