--- a/estudos/exercicios-javascript/javascript-aula16/exercicio-1.html
+++ b/estudos/exercicios-javascript/javascript-aula16/exercicio-1.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Crie uma p&aacute;gina web para exibir a previs&atilde;o do tempo de uma cidade.
 				</p>
