--- a/estudos/exercicios-javascript/javascript-aula17/exercicio-1.html
+++ b/estudos/exercicios-javascript/javascript-aula17/exercicio-1.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Crie uma p&aacute;gina web que simule um sorteio, considerando os
 					seguintes pontos:
