--- a/estudos/exercicios-javascript/javascript-aula2/exercicio-1.html
+++ b/estudos/exercicios-javascript/javascript-aula2/exercicio-1.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				O objetivo deste exercício é incrementar atributos e valores em um objeto
 				chamado "visitante" e depois exibi-lo através do console.log().
 			</div>
