--- a/estudos/exercicios-javascript/javascript-aula2/exercicio-2.html
+++ b/estudos/exercicios-javascript/javascript-aula2/exercicio-2.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				O objetivo desse Exercício é mostrar o comportamento dinâmico de cliques em um
 				elemento com JavaScript
 			</div>
