--- a/estudos/exercicios-javascript/javascript-aula2/exercicio-3.html
+++ b/estudos/exercicios-javascript/javascript-aula2/exercicio-3.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					O objetivo deste exercício é observar como funciona a ordem de execução do
 					código pelo console
