--- a/estudos/exercicios-javascript/javascript-aula2/exercicio-4.html
+++ b/estudos/exercicios-javascript/javascript-aula2/exercicio-4.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				O objetivo deste exercício é printar na tela um <br />texto escrito dentro da
 				caixa de texto abaixo<br />
 				ao pressionar o botão
