--- a/estudos/exercicios-javascript/javascript-aula2/exercicio-5.html
+++ b/estudos/exercicios-javascript/javascript-aula2/exercicio-5.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				O objetivo deste exercício é quando digitado <br />um numero na caixa abaixo
 				adiciona e/ou limita<br />
 				o numero a 2 casas decimais extras<br />
