--- a/estudos/exercicios-javascript/javascript-aula2/exercicio-8.html
+++ b/estudos/exercicios-javascript/javascript-aula2/exercicio-8.html
@@ -11,7 +11,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				O objetivo desse Exercício é:
 				<ul>
 					<li>Ter um botão onde, quando clicado</li>
