--- a/estudos/exercicios-javascript/javascript-aula3/exercicio-10.html
+++ b/estudos/exercicios-javascript/javascript-aula3/exercicio-10.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				O objetivo desse exercício é validar um número<br />
 				de telefone que segue este formato: <br />
 				(XX) XXXX-XXXX ou (XX) XXXXX-XXXX
