--- a/estudos/exercicios-javascript/javascript-aula3/exercicio-3.html
+++ b/estudos/exercicios-javascript/javascript-aula3/exercicio-3.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				O objetivo dessa página é, ter um texto clicável onde:
 				<ul>
 					<li>A cada clique um contador é acionado</li>
