--- a/estudos/exercicios-javascript/javascript-aula3/exercicio-8.html
+++ b/estudos/exercicios-javascript/javascript-aula3/exercicio-8.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				O objetivo do exerício é criar um alarme<br />
 				que é desativado por uma senha.<br />
 				Senha do Alarme: 114241
