--- a/estudos/exercicios-javascript/javascript-aula3/exercicio-9.html
+++ b/estudos/exercicios-javascript/javascript-aula3/exercicio-9.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				O Objetivo desse exercício é criar um aleatorizador de números,<br />
 				onde deve ser inserido um valor mínimo e outro máximo,<br />
 				o número sorteado aparecerá logo abaixo.<br /><br />
