--- a/estudos/exercicios-javascript/javascript-aula4/exercicio-10.html
+++ b/estudos/exercicios-javascript/javascript-aula4/exercicio-10.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					O objetivo desse exercício é criar uma lista de tarefas onde cada tarefa
 					<br />
