--- a/estudos/exercicios-javascript/javascript-aula4/exercicio-5.html
+++ b/estudos/exercicios-javascript/javascript-aula4/exercicio-5.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					O objetivo desse exercício é mostrar as diferenças em código dos comandos
 					condicionais
