--- a/estudos/exercicios-javascript/javascript-aula5/exercicio-3.html
+++ b/estudos/exercicios-javascript/javascript-aula5/exercicio-3.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				Faça uma página dividida em duas verticalmente. Do lado esquerdo há uma
 				textarea, do lado direito é uma div (ocupando toda a largura e altura da metade
 				direita). Ao digitar na textarea, o texto digitado é renderizado como HTML do
