--- a/estudos/exercicios-javascript/javascript-aula5/exercicio-4.html
+++ b/estudos/exercicios-javascript/javascript-aula5/exercicio-4.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Fa&ccedil;a uma p&aacute;gina que tem um &lt;input
 					type=&quot;text&quot;&gt; para digitar um n&uacute;mero de telefone, e um
