--- a/estudos/exercicios-javascript/javascript-aula5/exercicio-5.html
+++ b/estudos/exercicios-javascript/javascript-aula5/exercicio-5.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				Fa&ccedil;a uma p&aacute;gina web com dois &lt;input type=&quot;text&quot;&gt;.
 				Vamos fazer com que eles sejam &ldquo;g&ecirc;meos&rdquo;, ou seja, tudo que
 				acontece em um reflete automaticamente no outro: &bull; Ao passar o mouse
