--- a/estudos/exercicios-javascript/javascript-aula5/exercicio-6.html
+++ b/estudos/exercicios-javascript/javascript-aula5/exercicio-6.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				Fa&ccedil;a um &lt;input type=&quot;text&quot;&gt; para preenchimento do nome
 				completo da pessoa. Esse input s&oacute; deve aceitar letras (min&uacute;sculas
 				ou mai&uacute;sculas, somente sem acentos) e espa&ccedil;os em branco. Se o
