--- a/estudos/exercicios-javascript/javascript-aula5/exercicio-7.html
+++ b/estudos/exercicios-javascript/javascript-aula5/exercicio-7.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				Desafio ! Lógica difícil ! Trabalhoso ! Faça uma página que tem uma div com
 				borda preta e dentro dela uma div pequena colorida: Quando a div pequena é
 				clicada, ela troca de cor, digamos que ela ficou “ativa”. Enquanto ela está
