--- a/estudos/exercicios-javascript/javascript-aula5/exercicio-8.html
+++ b/estudos/exercicios-javascript/javascript-aula5/exercicio-8.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				Desafio ! Lógica ainda mais difícil ! Ainda mais trabalhoso ! Refaça o
 				exercício anterior , mas agora a div pequena é movimentada clicando e
 				arrastando com o mouse, não mais com as setas do teclado. Ou seja, ao clicar e
