--- a/estudos/exercicios-javascript/javascript-aula6/exercicio-1.html
+++ b/estudos/exercicios-javascript/javascript-aula6/exercicio-1.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Vamos fazer uma galeria de imagens. A p&aacute;gina ter&aacute; dois
 					inputs: um para o t&iacute;tulo da imagem, outro para o link (URL) da
