--- a/estudos/exercicios-javascript/javascript-aula6/exercicio-3.html
+++ b/estudos/exercicios-javascript/javascript-aula6/exercicio-3.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Quando a página inicia, não há nenhum contador na lista. Ao clicar em
 					“Adicionar”, um novo contador é adicionado na lista . E os botões “-” e “+”
