--- a/estudos/exercicios-javascript/javascript-aula6/exercicio-5.html
+++ b/estudos/exercicios-javascript/javascript-aula6/exercicio-5.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Vamos fazer uma página para criar um quiz composto de várias questões de
 					múltipla escolha.
