--- a/estudos/exercicios-javascript/javascript-aula7/exercicio-3.html
+++ b/estudos/exercicios-javascript/javascript-aula7/exercicio-3.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Faça uma página web que funciona como um bloco de notas, ou seja, um
 					textarea gigante para digitar qualquer coisa. Mesmo que a página seja
