--- a/estudos/exercicios-javascript/javascript-aula7/exercicio-4.html
+++ b/estudos/exercicios-javascript/javascript-aula7/exercicio-4.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Partindo da sua solu&ccedil;&atilde;o ao exerc&iacute;cio anterior,
 					adicione na p&aacute;gina um formul&aacute;rio para
