--- a/estudos/exercicios-javascript/javascript-aula7/exercicio-6.html
+++ b/estudos/exercicios-javascript/javascript-aula7/exercicio-6.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Vamos fazer uma p&aacute;gina para anota&ccedil;&atilde;o de lembretes
 					associados a um dia do ano. A p&aacute;gina ter&aacute;:
