--- a/estudos/exercicios-javascript/javascript-aula8/exercicio-2.html
+++ b/estudos/exercicios-javascript/javascript-aula8/exercicio-2.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					No exemplo da galeria de imagens resolvido no material desta aula, quando
 					implementamos a funcionalidade de deletar uma imagem, tivemos um dilema: Se
