--- a/estudos/exercicios-javascript/javascript-aula8/exercicio-3.html
+++ b/estudos/exercicios-javascript/javascript-aula8/exercicio-3.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p> Vamos fazer uma p&aacute;gina de anota&ccedil;&atilde;o de lembretes. </p>
 				<p>
 					A p&aacute;gina ter&aacute; duas se&ccedil;&otilde;es: Na primeira
