--- a/estudos/exercicios-javascript/javascript-aula8/exercicio-4.html
+++ b/estudos/exercicios-javascript/javascript-aula8/exercicio-4.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Vamos fazer uma p&aacute;gina para registrar receitas culin&aacute;rias.
 					Para simplificar, a p&aacute;gina n&atilde;o ter&aacute; salvamento
