--- a/estudos/exercicios-javascript/javascript-aula9/exercicio-2.html
+++ b/estudos/exercicios-javascript/javascript-aula9/exercicio-2.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Fa&ccedil;a uma p&aacute;gina web que tem uma textarea onde o
 					usu&aacute;rio deve colar uma lista de nomes separados por v&iacute;rgulas,
