--- a/estudos/exercicios-javascript/javascript-aula9/exercicio-4.html
+++ b/estudos/exercicios-javascript/javascript-aula9/exercicio-4.html
@@ -12,7 +12,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Crie uma p&aacute;gina web que pe&ccedil;a ao usu&aacute;rio que digite um
 					nome de produto, sua descri&ccedil;&atilde;o e seu respectivo valor e que
