--- a/estudos/exercicios-javascript/javascript-aula1/exercicio-nome.html
+++ b/estudos/exercicios-javascript/javascript-aula1/exercicio-nome.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<h3>Diga seu nome!</h3>
 				<p>
 					A proposta do exercício é receber os dados capturados pelos prompts e
