--- a/estudos/exercicios-javascript/javascript-aula10/exercicio-1.html
+++ b/estudos/exercicios-javascript/javascript-aula10/exercicio-1.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p> Reescreva o loop do c&oacute;digo abaixo usando forEach: </p>
 				<pre>
 // Array de filiais
