--- a/estudos/exercicios-javascript/javascript-aula10/exercicio-2.html
+++ b/estudos/exercicios-javascript/javascript-aula10/exercicio-2.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Fa&ccedil;a uma aplica&ccedil;&atilde;o web onde o usu&aacute;rio pode
 					digitar o nome de uma cidade (&lt;input type=&quot;text&quot;&gt;) e clicar
