--- a/estudos/exercicios-javascript/javascript-aula11/exercicio-2.html
+++ b/estudos/exercicios-javascript/javascript-aula11/exercicio-2.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Implemente uma fun&ccedil;&atilde;o chamada range que funciona da seguinte
 					forma:
