--- a/estudos/exercicios-javascript/javascript-aula12/index.html
+++ b/estudos/exercicios-javascript/javascript-aula12/index.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<h2>Aula 12 - Usando Módulos</h2>
 				<p> Essa aula consiste em aprender a utilizar módulos! </p>
 				<p>
