--- a/estudos/exercicios-javascript/javascript-aula13/exercicio-1.html
+++ b/estudos/exercicios-javascript/javascript-aula13/exercicio-1.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Crie uma p&aacute;gina web que &lsquo;arme uma bomba (imagem de uma
 					bomba) que &ldquo;exploda&rdquo; em 10 segundos, considerando os seguintes
