--- a/estudos/exercicios-javascript/javascript-aula16/exercicio-2.html
+++ b/estudos/exercicios-javascript/javascript-aula16/exercicio-2.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Utilize a API deck de cartas (https://deckofcardsapi.com/) para criar
 					uma fun&ccedil;&atilde;o, utilizando async/await, que:
