--- a/estudos/exercicios-javascript/javascript-aula16/exercicio-3.html
+++ b/estudos/exercicios-javascript/javascript-aula16/exercicio-3.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Reescreva a fun&ccedil;&atilde;o da quest&atilde;o anterior utilizando o m&eacute;todo
 					Promise.all
