--- a/estudos/exercicios-javascript/javascript-aula17/exercicio-2.html
+++ b/estudos/exercicios-javascript/javascript-aula17/exercicio-2.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Crie uma classe que represente um Avatar num jogo de plataforma,
 					considerando os seguintes crit&eacute;rios:
