--- a/estudos/exercicios-javascript/javascript-aula17/exercicio-3.html
+++ b/estudos/exercicios-javascript/javascript-aula17/exercicio-3.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Utilizando a classe Avatar criada na questão 2, crie as seguintes
 					subclasses:
