--- a/estudos/exercicios-javascript/javascript-aula2/exercicio-10.html
+++ b/estudos/exercicios-javascript/javascript-aula2/exercicio-10.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				O objetivo deste exercício é criar uma lista e ir adicionando topicos a cada
 				vez que é clicado o botão adiciona.
 			</div>
