--- a/estudos/exercicios-javascript/javascript-aula2/exercicio-7.html
+++ b/estudos/exercicios-javascript/javascript-aula2/exercicio-7.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				O objetivo desse Exercício é:
 				<ul>
 					<li>Uma página web de seleção de lanche</li>
