--- a/estudos/exercicios-javascript/javascript-aula3/exercicio-4.html
+++ b/estudos/exercicios-javascript/javascript-aula3/exercicio-4.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				O objetivo do Exercício é:
 				<ul>
 					<li>
