--- a/estudos/exercicios-javascript/javascript-aula4/exercicio-6.html
+++ b/estudos/exercicios-javascript/javascript-aula4/exercicio-6.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					O objetivo desse exercício é criar um sistema <br />
 					simples de cadastro de produtos em memória
