--- a/estudos/exercicios-javascript/javascript-aula5/exercicio-1.html
+++ b/estudos/exercicios-javascript/javascript-aula5/exercicio-1.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Fa&ccedil;a uma p&aacute;gina que tem um &lt;select&gt; para o
 					usu&aacute;rio escolher um produto. Os produtos podem ser o que voc&ecirc;
