--- a/estudos/exercicios-javascript/javascript-aula5/exercicio-2.html
+++ b/estudos/exercicios-javascript/javascript-aula5/exercicio-2.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				Quando o usu&aacute;rio digita uma tarefa no input e clica em
 				&ldquo;Adicionar&rdquo;, ela &eacute; adiciona na lista, e o input &eacute;
 				limpado. Mas tem um problema de usabilidade: normalmente esperamos que, ao
