--- a/estudos/exercicios-javascript/javascript-aula6/exercicio-4 clsr.html
+++ b/estudos/exercicios-javascript/javascript-aula6/exercicio-4 clsr.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<h3>Versão Closure</h3>
 				<p>
 					Vamos fazer uma lista de tarefas com prioridade. A p&aacute;gina
