--- a/estudos/exercicios-javascript/javascript-aula9/exercicio-3.html
+++ b/estudos/exercicios-javascript/javascript-aula9/exercicio-3.html
@@ -8,7 +8,8 @@
 	</head>
 	<body>
 		<main id="content">
-			<div id="explicacao">
+			<button id="btnExplicacao">?</button>
+			<div id="explicacao" style="display: none;">
 				<p>
 					Fa&ccedil;a uma p&aacute;gina web com um bot&atilde;o
 					&ldquo;Sortear&rdquo;.
