Pequenos ajustes de estilo

--- a/estudos/exercicios-javascript/javascript-aula14/exercicio-1.html
+++ b/estudos/exercicios-javascript/javascript-aula14/exercicio-1.html
@@ -4,14 +4,13 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="/main.css" />
-		<link rel="stylesheet" href="/exercicios-javascript/main.css">
 		<title>Dooceria</title>
 	</head>
 	<body>
 		<main id="content">
 			<div id="root"></div>
 			<nav id="linkNav">
-				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
+				Voltar para a <a class="link" href="/estudos/exercicios-javascript/javascript-aula14/">Lista</a> <br />
 				Voltar para o <a href="/estudos/exercicios-javascript/" class="link">Inicio</a>
 			</nav>
 		</main>
