SideNav dinâmico e ajustes de compatibilidade com Header

--- a/html/header.html
+++ b/html/header.html
@@ -1,14 +1,26 @@
 <header class="header">
   <div class="logo clickable">
-    <a href="/" class="link">
-      gaidenblk
-    </a>
+    <a href="/" class="link">gaidenblk</a>
   </div>
   <nav>
     <ul class="menu customUl">
-      <li class="clickable"><a href="/estudos/" class="link">Estudos</a></li>
-      <li class="clickable"><a href="/sobre/" class="link">Sobre Mim</a></li>
+      <li>
+        <a href="/estudos/" class="link">Estudos</a>
+        <ul class="submenu">
+          <li>Projeto Alpha Ed/Tech
+            <ul class="submenu2">
+              <li>
+                <a href="/estudos/exercicios-javascript/" class="link">Exercícios das Aulas de JavaScript</a>
+              </li>
+              <li>
+                <a href="/estudos/exercicios-css/" class="link">Exercícios das Aulas de CSS</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </li>
       <li class="clickable"><a href="/pixelarts/" class="link">Pixel Arts</a></li>
+      <li class="clickable"><a href="/sobre/" class="link">Sobre Mim</a></li>
       <li class="clickable"><a href="/contato/" class="link">Contato</a></li>
     </ul>
   </nav>
