--- a/html/sideNavbarJS.html
+++ b/html/sideNavbarJS.html
@@ -1,6 +1,6 @@
 <html>
-  <button id="sideNavBtn">&lt;</button>
-  <nav id="sideNavbar">
+  <button class="sideNavBtn">&lt;</button>
+  <nav class="sideNavbar" id="jsNav">
     <ul class="customUl">
       <li class="clickable">
         <a href="/estudos/exercicios-javascript/javascript-aula1/" class="link">
