--- a/html/sideNavbarCSS.html
+++ b/html/sideNavbarCSS.html
@@ -1,6 +1,6 @@
 <html>
-  <button id="sideNavBtn">&lt;</button>
-  <nav id="sideNavbar">
+  <button class="sideNavBtn">&lt;</button>
+  <nav class="sideNavbar" id="cssNav">
     <ul class="customUl">
 
       <li class="clickable">
