--- a/estudos/exercicios-javascript/javascript-aula10/exercicio-4.html
+++ b/estudos/exercicios-javascript/javascript-aula10/exercicio-4.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="icon" href="/assets/gakih.png" type="image/x-icon" />
+		<link rel="icon" href="/assets/gakih.png" type="image/x-icon" />
 		<link rel="stylesheet" href="/main.css" />
 		<link rel="stylesheet" href="./css/exercicio-4.css" />
 		<title>Exercicio 4</title>
