--- a/estudos/exercicios-javascript/javascript-aula5/exercicio-3.html
+++ b/estudos/exercicios-javascript/javascript-aula5/exercicio-3.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="icon" href="/assets/gakih.png" type="image/x-icon" />
 		<link rel="stylesheet" href="/main.css" />
 		<link rel="stylesheet" href="./css/exercicio-3.css" />
 		<title>Exercício 3</title>
