--- a/html/header.html
+++ b/html/header.html
@@ -1,18 +1,19 @@
 <header class="header">
   <div class="logo clickable">
-    <a href="/" class="link">gaidenblk</a>
+    <img src="/assets/gakih.png" alt="Logo">
+    <a href="/" class="link"><img src="/assets/gaidenblkwmt.gif" alt="WaterMark"></a>
   </div>
   <nav>
-    <ul class="menu customUl">
-      <li>
+    <ul class="menu">
+      <li class="clickable">
         <a href="/estudos/" class="link">Estudos</a>
         <ul class="submenu">
           <li>Projeto Alpha Ed/Tech
             <ul class="submenu2">
-              <li>
+              <li class="clickable">
                 <a href="/estudos/exercicios-javascript/" class="link">Exercícios das Aulas de JavaScript</a>
               </li>
-              <li>
+              <li class="clickable">
                 <a href="/estudos/exercicios-css/" class="link">Exercícios das Aulas de CSS</a>
               </li>
             </ul>
