Adicionado e adaptado o Projeto FlexBox

--- a/html/sideNavbarCSS.html
+++ b/html/sideNavbarCSS.html
@@ -11,6 +11,14 @@
           </small>
         </a>
       </li>
+      <li class="clickable">
+        <a href="/estudos/exercicios-css/projetoflexbox/" class="link">
+          <strong>Projeto FlexBox</strong>
+          <small>
+            Demonstração de como Funciona
+          </small>
+        </a>
+      </li>
     </ul>
   </nav>
 </html>
