Adicionado e adaptado o Projeto Grid

--- a/html/sideNavbarCSS.html
+++ b/html/sideNavbarCSS.html
@@ -19,6 +19,14 @@
           </small>
         </a>
       </li>
+      <li class="clickable">
+        <a href="/estudos/exercicios-css/projetogrid/" class="link">
+          <strong>Projeto Grid</strong>
+          <small>
+            Criação de uma página com Grid
+          </small>
+        </a>
+      </li>
     </ul>
   </nav>
 </html>
