Adicionado e adaptado Projeto Modal

--- a/html/sideNavbarCSS.html
+++ b/html/sideNavbarCSS.html
@@ -27,6 +27,14 @@
           </small>
         </a>
       </li>
+      <li class="clickable">
+        <a href="/estudos/exercicios-css/projetomodal/" class="link">
+          <strong>Projeto Modal</strong>
+          <small>
+            Demonstrando a uso de Modais
+          </small>
+        </a>
+      </li>
     </ul>
   </nav>
 </html>
