Adicionado secao Sobre e Contato

--- a/sobre/index.html
+++ b/sobre/index.html
@@ -5,11 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/assets/gakih.png" type="image/x-icon" />
     <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Estudos</title>
   </head>
   <body>
     <div id="content">
-      Sou apenas um dev pai de família que adora videogames e pixel art!
+      <section id="sobre-mim" class="sobre-mim-container">
+        <div class="bloco">
+          <!-- Adicione imagem aqui (ex: uma foto sua ou algo relacionado a tecnologia) -->
+          <img src="./img/perfil_sobre.jpg" alt="Foto de perfil" class="imagem-bloco">
+          <div class="texto-bloco">
+            <h2>Sobre Mim</h2>
+            <p>Oi! Meu nome é <strong>Leandro Santos</strong> e eu sou apaixonado por desenvolvimento web, games e arte
+              digital. Desde pequeno, sempre fui curioso com tecnologia — cresci jogando videogame e desmontando as
+              coisas pra entender como funcionavam.</p>
+          </div>
+        </div>
+
+        <div class="bloco">
+          <!-- Adicione imagem aqui (ex: código, terminal, etc) -->
+          <img src="./img/sobre_tec.png" alt="Ambiente de desenvolvimento" class="imagem-bloco">
+          <div class="texto-bloco">
+            <p>Hoje estou trilhando meu caminho como <strong>desenvolvedor web</strong>, focando principalmente em
+              <strong>backend</strong> e <strong>servidores</strong>. Gosto de fazer as coisas na unha: escrevo código
+              puro em <code>Node.js</code>, trabalho com <code>PostgreSQL</code>, configuro <code>Nginx</code> pra
+              servir minhas aplicações e uso <code>Docker</code> pra manter tudo rodando redondo.
+            </p>
+          </div>
+        </div>
+
+        <div class="bloco">
+          <!-- Adicione imagem aqui (ex: interface de site ou projeto seu) -->
+          <img src="./img/web_sobre.png" alt="Frontend" class="imagem-bloco">
+          <div class="texto-bloco">
+            <p>Também tenho explorado bastante o <strong>frontend com HTML, CSS e JavaScript puro</strong>, sem
+              frameworks. Já implementei sistemas com <em>autenticação</em>, <em>rotas protegidas</em>,
+              <em>paginação</em> e <em>controle de acesso</em>, sempre pensando na experiência de quem usa.
+            </p>
+          </div>
+        </div>
+
+        <div class="bloco">
+          <!-- Adicione imagem aqui (ex: pixel art ou referência de game retro) -->
+          <img src="./img/Norfair Bubbles Tv10X.png" alt="Pixel Art" class="imagem-bloco">
+          <div class="texto-bloco">
+            <p>Além do código, também sou <strong>pixel artista</strong> e tenho um bom domínio de <strong>teoria das
+                cores</strong>. Curto muito criar visuais inspiradores e interfaces bonitas. Minha paixão por games me
+              leva a estudar <strong>desenvolvimento de jogos</strong>, especialmente os estilos <em>retro</em>,
+              <em>Metroidvania</em> e de <em>exploração</em>.
+            </p>
+          </div>
+        </div>
+
+        <div class="bloco">
+          <!-- Adicione imagem aqui (ex: algo inspirador, paisagem ou arte) -->
+          <img src="./img/Arvore10x.gif" alt="Arte e inspiração" class="imagem-bloco">
+          <div class="texto-bloco">
+            <p>Sou criativo, autodidata e gosto de manter meus projetos organizados e simples. Valorizo soluções
+              elegantes, tranquilidade no processo e sempre busco aprender mais, tanto no código quanto na arte.</p>
+            <p>Se quiser trocar uma ideia, ver meus projetos ou só bater um papo sobre games, tô por <a href="/contato/"
+                class="link">aqui!</a> 🎮✨</p>
+          </div>
+        </div>
+      </section>
+
     </div>
     <script src="/main.js"></script>
   </body>
