--- a/contato/index.html
+++ b/contato/index.html
@@ -5,14 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/assets/gakih.png" type="image/x-icon" />
     <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Estudos</title>
   </head>
   <body>
     <div id="content">
-      Mande um alô!
-      <p>
-        Minhas redes de contato:
-      </p>
+      <section id="contato" class="contato-container">
+        <h2>Redes de Contato</h2>
+        <p>Você pode me encontrar e trocar uma ideia nas redes abaixo:</p>
+        <div class="redes-grid">
+          <a href="https://github.com/gaidenblk" target="_blank" class="rede">
+            <img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" alt="GitHub">
+            <span>GitHub</span>
+          </a>
+          <a href="https://www.instagram.com/gaidenblk" target="_blank" class="rede">
+            <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
+            <span>@gaidenblk</span>
+          </a>
+          <a href="https://www.linkedin.com/in/gaidenblk" target="_blank" class="rede">
+            <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn">
+            <span>LinkedIn</span>
+          </a>
+          <a href="https://www.facebook.com/gaidenblk" target="_blank" class="rede">
+            <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook">
+            <span>Facebook</span>
+          </a>
+          <a href="https://steamcommunity.com/id/gaidenblk" target="_blank" class="rede">
+            <img src="https://cdn-icons-png.flaticon.com/512/15466/15466225.png" alt="Steam">
+            <span>Steam</span>
+          </a>
+        </div>
+      </section>
+
     </div>
     <script src="/main.js"></script>
   </body>
