Implementado mobile view com menu hamburguer

--- a/html/header.html
+++ b/html/header.html
@@ -4,6 +4,11 @@
     <a href="/" class="link"><img src="/assets/gaidenblkwmt.gif" alt="WaterMark"></a>
   </div>
   <nav>
+    <input type="checkbox" id="check">
+    <label for="check">
+      <i id="menuBtn">&equiv;</i>
+      <i id="menuCncl">&times;</i>
+    </label>
     <ul class="menu">
       <li class="clickable">
         <a href="/estudos/" class="link">Estudos</a>
