--- a/sobre/index.html
+++ b/sobre/index.html
@@ -6,13 +6,12 @@
     <link rel="icon" href="/assets/gakih.png" type="image/x-icon" />
     <link rel="stylesheet" href="/main.css" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Estudos</title>
+    <title>Sobre Mim</title>
   </head>
   <body>
     <div id="content">
       <section id="sobre-mim" class="sobre-mim-container">
         <div class="bloco">
-          <!-- Adicione imagem aqui (ex: uma foto sua ou algo relacionado a tecnologia) -->
           <img src="./img/perfil_sobre.jpg" alt="Foto de perfil" class="imagem-bloco">
           <div class="texto-bloco">
             <h2>Sobre Mim</h2>
@@ -23,7 +22,6 @@
         </div>
 
         <div class="bloco">
-          <!-- Adicione imagem aqui (ex: código, terminal, etc) -->
           <img src="./img/sobre_tec.png" alt="Ambiente de desenvolvimento" class="imagem-bloco">
           <div class="texto-bloco">
             <p>Hoje estou trilhando meu caminho como <strong>desenvolvedor web</strong>, focando principalmente em
@@ -35,7 +33,6 @@
         </div>
 
         <div class="bloco">
-          <!-- Adicione imagem aqui (ex: interface de site ou projeto seu) -->
           <img src="./img/web_sobre.png" alt="Frontend" class="imagem-bloco">
           <div class="texto-bloco">
             <p>Também tenho explorado bastante o <strong>frontend com HTML, CSS e JavaScript puro</strong>, sem
@@ -46,7 +43,6 @@
         </div>
 
         <div class="bloco">
-          <!-- Adicione imagem aqui (ex: pixel art ou referência de game retro) -->
           <img src="./img/Norfair Bubbles Tv10X.png" alt="Pixel Art" class="imagem-bloco">
           <div class="texto-bloco">
             <p>Além do código, também sou <strong>pixel artista</strong> e tenho um bom domínio de <strong>teoria das
@@ -58,7 +54,6 @@
         </div>
 
         <div class="bloco">
-          <!-- Adicione imagem aqui (ex: algo inspirador, paisagem ou arte) -->
           <img src="./img/Arvore10x.gif" alt="Arte e inspiração" class="imagem-bloco">
           <div class="texto-bloco">
             <p>Sou criativo, autodidata e gosto de manter meus projetos organizados e simples. Valorizo soluções
