--- a/contato/index.html
+++ b/contato/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/assets/gakih.png" type="image/x-icon" />
     <link rel="stylesheet" href="/main.css" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Estudos</title>
+    <title>Contato</title>
   </head>
   <body>
     <div id="content">
