--- a/pixelarts/index.html
+++ b/pixelarts/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/assets/gakih.png" type="image/x-icon" />
     <link rel="stylesheet" href="/main.css" />
-    <title>Estudos</title>
+    <title>Pixel Arts</title>
   </head>
   <body>
     <div id="content">
