Pequenos ajustes no Css - Mobile view

--- a/estudos/exercicios-javascript/javascript-aula2/exercicio-7.html
+++ b/estudos/exercicios-javascript/javascript-aula2/exercicio-7.html
@@ -25,7 +25,7 @@
 					</li>
 				</ul>
 			</div>
-			<div id="container">
+			<div id="exercicio">
 				<div id="omelete" onclick="aplicaBorda(this)">
 					<img src="./img/exercicio-7/omelete.png" alt="Lanche Omelete" />
 				</div>
