Pequenos ajustes no Css - Mobile view e Logica

--- a/estudos/exercicios-javascript/javascript-aula2/exercicio-3.html
+++ b/estudos/exercicios-javascript/javascript-aula2/exercicio-3.html
@@ -37,7 +37,12 @@
 					<li>console.log(4)</li>
 				</ul>
 			</div>
-			<button>Botão</button>
+			<div id="exercicio">
+				<button id="btnExecuta">Botão</button>
+				<ul id="console">
+					<li>Console.log()</li>
+				</ul>
+			</div>
 			<nav id="linkNav">
 				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
 				Voltar para o <a href="/estudos/exercicios-javascript/" class="link">Inicio</a>
