--- a/estudos/exercicios-javascript/javascript-aula2/exercicio-4.html
+++ b/estudos/exercicios-javascript/javascript-aula2/exercicio-4.html
@@ -16,8 +16,8 @@
 				ao pressionar o botão
 			</div>
 			<div id="exercicio">
-				<input type="text" />
-				<button>botao</button><br />
+				<input id="inptList" type="text" />
+				<button id="btnPrint">botao</button><br />
 			</div>
 			<nav id="linkNav">
 				Voltar para a <a class="link" onclick="window.history.back()">Lista</a> <br />
