Adicionado Galeria de Pixel Arts

--- a/pixelarts/index.html
+++ b/pixelarts/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/assets/gakih.png" type="image/x-icon" />
     <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Pixel Arts</title>
   </head>
   <body>
     <div id="content">
-      Galeria de Pixel Arts!
+      <h2 id="gallery">Galeria de Pixel Arts!</h2>
+      <div id="galleryContainer"></div>
     </div>
     <script src="/main.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
